--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
+    "@heroicons/react": "^2.1.5",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
