--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
+    "@iconify-icons/mdi": "^1.2.48",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1"
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
+    "@iconify/tailwind": "^1.1.2",
     "@types/node": "22.1.0",
     "@types/react": "18.3.3",
     "eslint": "^8",
