--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@iconify-icons/mdi": "^1.2.48",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "plyr": "^3.7.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "video.js": "^8.17.2"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
