--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iconify/tailwind": "^1.1.2",
     "@types/node": "22.1.0",
     "@types/react": "18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
