--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@iconify-icons/mdi": "^1.2.48",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "next": "14.2.5",
     "plyr": "^3.7.8",
     "react": "^18",
@@ -23,6 +27,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.4.0",
     "video.js": "^8.17.2"
   },
   "devDependencies": {
