--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify-icons/mdi": "^1.2.48",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
@@ -24,7 +25,7 @@
     "plyr": "^3.7.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
