--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "plyr": "^3.7.8",
     "react": "^18",
     "react-dom": "^18",
